fixed the gradient and align

--- a/src/App.css
+++ b/src/App.css
@@ -20,20 +20,12 @@
 }
 
 svg {
-  /* display: flex;
-  align-items: center;
-  justify-items: center; */
-  /* width: 400px;
-  height: 400px; */
-  width: 100vw;
-  height: 100vh;
   position: absolute;
-  z-index: -2;
+  width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
-  /* margin: 0 auto;
-  margin-top: 1rem;
-  margin-bottom: 3rem; */
+  z-index: -1; /* Place the SVG in the background */
 }
 
 input {
